<resources>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="back_nanas">5% Nanas Back\10Get %s Nanas instantly add into account after redeem this reward.</string>
    <string name="btn_back">Back</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_change_country">Change Country</string>
    <string name="btn_enter">Enter</string>
    <string name="btn_log_out">Log Out</string>
    <string name="btn_ok">OK</string>
    <string name="btn_redeem">Redeem</string>
    <string name="btn_send">Send</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_update">Update</string>
    <string name="btn_yes">Yes</string>
    <string name="confirm_paypal_account">Confirm your PayPal account is correct, we will directly deposit money to your account. You can\'t change your PayPal account in the future.</string>
    <string name="country_au">Australia</string>
    <string name="country_br">Brazil</string>
    <string name="country_ca">Canada</string>
    <string name="country_de">Germany</string>
    <string name="country_es">Spain</string>
    <string name="country_fr">France</string>
    <string name="country_in">India</string>
    <string name="country_it">Italy</string>
    <string name="country_nl">Netherlands</string>
    <string name="country_uk">United Kingdom</string>
    <string name="country_us">United States</string>
    <string name="country_ww">Worldwide</string>
    <string name="dialog_invitation_message">people to input your invitation code, then you can input other\'s invitation code once again.</string>
    <string name="dialog_share_body">Share this reward on Facebook to get %1$s%2$s Nanas%3$s.</string>
    <string name="dialog_share_title">Get 500 Nanas</string>
    <string name="earn_at_least">Earn at least</string>
    <string name="enable_cookie">You must enable your Safari Cookies to continue:</string>
    <string name="error_incorrect_input">Incorrect username or password. If you changed your password recently, you have to login back with the new password.</string>
    <string name="error_information">Please check your information and try again.</string>
    <string name="error_irregular_activity">Your account has been disabled due to irregular activity.</string>
    <string name="error_multiple_devices">You login too many devices with this same account. You are unable to login on this device now. Please contact us if you have any question.</string>
    <string name="error_not_working">Something is not working right. We are working hard to fix it. Try again later.</string>
    <string name="error_rfn_conflict">Random Free Nanas has already been taken on this device.</string>
    <string name="error_rfn_forbidden">You already got your Random Free Nanas for today.</string>
    <string name="error_session_expired">Your session has expired. Please log in again.</string>
    <string name="error_under_maintenance">We are undergoing maintenance. Please come back later for more rewards.</string>
    <string name="feedback">Would you give us some feedback?</string>
    <string name="from_offers">from offers.</string>
    <string name="get_random_nanas_offer">You get a random free Nanas! Click Go to get %1$s%2$s Nanas%3$s.</string>
    <string name="help_step_1">Click on the first AppNana Sync app offer</string>
    <string name="help_step_2">Install AppNana Sync &amp; login with your AppNana account</string>
    <string name="help_step_3">Come back to appnana.com to see all the unlock offers</string>
    <string name="help_step_4">Install and play free apps to get Nana credits</string>
    <string name="help_step_5">Cash In Your Nana For Great Rewards!</string>
    <string name="help_step_6">When you earn enough Nanas, you can redeem rewards.</string>
    <string name="help_step_7">Add To Your Home Screen For Easy Open Next Time</string>
    <string name="input_again_body">Ask %1$s%2$s%3$s people to input your invitation code, then you can input other\'s invitation code once again.</string>
    <string name="input_again_fail_body">Invalid! Both you &amp; your invited friend need to have at least 15,000 Nanas to activate this feature. Please earn up to 15,000 Nanas then input invitation code again.</string>
    <string name="input_again_fail_body_1">Input your friend\'s invitation code, not yours.</string>
    <string name="input_again_fail_body_2">You have already input the invitation code.</string>
    <string name="input_again_success_body">Congratulations! 5 people already input your code. You earn a chance to input other\'s invitation code now.</string>
    <string name="input_again_success_title">Input other’s code</string>
    <string name="input_again_title">Input Code Again?</string>
    <string name="input_paypal_and_name">Please input your PayPal account and your name.</string>
    <string name="install">Install</string>
    <string name="install_body">Go to AppStore to install for free?</string>
    <string name="invalid_bitcoin_address">You must input a valid Bitcoin address.</string>
    <string name="invalid_email_address">Invalid email address. Example: hi@gmail.com</string>
    <string name="invalid_input_name">You must input your name.</string>
    <string name="invalid_invitation_code">Invalid invitation code.</string>
    <string name="invalid_paypal_account">You must input a valid PayPal account.</string>
    <string name="invite_least_body">Please send at least 3 invitations to receive bonus Nanas.</string>
    <string name="invite_mail_body">Send invitations from your Gmail and receive %s Nanas.</string>
    <string name="loading">Loading</string>
    <string name="nav_invite">Invite</string>
    <string name="no_daily_nanas_body_4">Ask</string>
    <string name="pending_nanas_body">Your Nanas may take up to 24 hours to process. You need to install and play this app for at least 30 seconds, and completed any tutorials or registrations. You will not get Nanas for the apps you\'ve installed before. The pending apps will automatically clear in two days.</string>
    <string name="pending_nanas_title">Pending Nanas?</string>
    <string name="rate_us">Rate us?</string>
    <string name="redeem_reward_card">Please input your name. We will send the gift to your email within 48 hours.</string>
    <string name="tips_already_registered">Already registered? Login here</string>
    <string name="tips_bitcoin_address">Bitcoin address</string>
    <string name="tips_country">Country</string>
    <string name="tips_email">Email</string>
    <string name="tips_email_with_colon">Email: </string>
    <string name="tips_forgot_password">Forgot Password</string>
    <string name="tips_help">help</string>
    <string name="tips_history">History</string>
    <string name="tips_how_it_works">How It Works</string>
    <string name="tips_important">Important</string>
    <string name="tips_loading_title">Loading</string>
    <string name="tips_login">Login</string>
    <string name="tips_must_login_or_register">You must register or login to continue!</string>
    <string name="tips_name">Name</string>
    <string name="tips_nana_login">Nana\10Login</string>
    <string name="tips_nana_register">Nana\10Register</string>
    <string name="tips_password">Password</string>
    <string name="tips_paypal_email">PayPal email account</string>
    <string name="tips_register">Register</string>
    <string name="tips_register_get_nanas">Register Get %s Nanas</string>
    <string name="tips_success">Success</string>
    <string name="tips_terms_service">By joining AppNana, you agree to our %1$sTerms of Service%2$s</string>
    <string name="ad_banner_on_reward_id">9a491acba2814764b62600a4ff0178c1</string>
    <string name="btn_close">×</string>
    <string name="btn_close_string">Close</string>
    <string name="btn_open_play_store">Open Play Store</string>
    <string name="input_code_again_times">5</string>
    <string name="tips_search_offer_step_1">1. Search Play Store keyword:</string>
    <string name="tips_search_offer_step_2">2. Find App icon in results:</string>
    <string name="tips_search_offer_step_3">3. Install and open to earn credits</string>
</resources>