<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto" android:background="@android:color/transparent" android:padding="@dimen/base_dimen" android:layout_width="match_parent" android:layout_height="wrap_content">
    <RelativeLayout android:background="@android:color/white" android:padding="@dimen/base_dimen" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:id="@+id/btn_close_symbol" android:layout_width="20dp" android:layout_height="20dp" android:text="@string/btn_close" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" style="@style/Theme.Button.GrayCircle"/>
        <TextView android:textAppearance="@style/TextAppearance.Medium" android:textColor="@color/orange" android:gravity="center_horizontal" android:id="@+id/txt_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tips_important" android:layout_alignParentTop="true"/>
        <TextView android:textAppearance="@style/TextAppearance.Small" android:textColor="@color/dark_gray" android:gravity="center_horizontal" android:id="@+id/txt_tips_step1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_dimen" android:text="@string/tips_search_offer_step_1" android:layout_below="@+id/txt_title"/>
        <TextView android:textAppearance="@style/TextAppearance.Small" android:textColor="@color/black" android:gravity="center_horizontal" android:id="@+id/txt_keyword" android:background="@color/light_gray" android:padding="@dimen/base_dimen" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_dimen" android:minWidth="200dp" android:layout_below="@+id/txt_tips_step1" android:layout_centerHorizontal="true" android:textIsSelectable="true"/>
        <TextView android:textAppearance="@style/TextAppearance.Small" android:textColor="@color/dark_gray" android:gravity="center_horizontal" android:id="@+id/txt_tips_step2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_dimen" android:text="@string/tips_search_offer_step_2" android:layout_below="@+id/txt_keyword"/>
        <ProgressBar android:id="@+id/probar_loading" android:layout_width="32dp" android:layout_height="32dp" android:layout_marginTop="@dimen/base_dimen_x3" android:layout_below="@+id/txt_tips_step2" android:layout_centerHorizontal="true" android:contentDescription="@string/tips_search_offer_step_2" style="?android:attr/progressBarStyleSmall"/>
        <ImageView android:id="@+id/img_app_icon" android:layout_width="64dp" android:layout_height="64dp" android:layout_marginTop="@dimen/base_dimen" android:layout_below="@+id/txt_tips_step2" android:layout_centerHorizontal="true" android:contentDescription="@string/tips_search_offer_step_2"/>
        <TextView android:textAppearance="@style/TextAppearance.Small" android:textColor="@color/dark_gray" android:gravity="center_horizontal" android:id="@+id/txt_tips_step3" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_dimen" android:text="@string/tips_search_offer_step_3" android:layout_below="@+id/img_app_icon"/>
        <Button android:id="@+id/btn_negative" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_dimen_x2" android:text="@string/btn_close_string" android:layout_below="@+id/txt_tips_step3" style="@style/Theme.Button.White"/>
        <Button android:id="@+id/btn_positive" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_dimen_x2" android:text="@string/btn_open_play_store" android:layout_below="@+id/txt_tips_step3" style="@style/Theme.Button.Orange"/>
    </RelativeLayout>
</LinearLayout>
